<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="new_task">Add New Task</string>
    <string name="schedule">Schedule</string>
    <string name="wake_up_time">Wake up Time</string>
    <string name="went_to_bed_at">Went To Bed At</string>
    <string name="alcohol">Alcohol</string>
    <string name="pick_time">Pick Time</string>
    <string name="calories_burnt">Enter Number</string>
    <string name="calories">Cal Burnt</string>
    <string name="steps_completed">Distance Covered</string>
    <string name="steps_completed_hint">Steps</string>
    <string name="assignment">Assignment</string>
    <string name="completed">Done</string>
    <string name="incomplete">Pending</string>
    <string name="unknown">Unknown</string>
    <string name="action_delete_all_entries">Delete All Habits</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="cal">Cal</string>
    <string name="water_consumed">Water</string>
    <string name="water_consumed_hint">Number of Liters</string>
    <string name="lt">Lt</string>
    <string name="alcohol_consumption">Alcohol Consumption</string>
    <string name="consumed_array">Yes</string>
    <string name="noConsumption_array">No</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Track Perfectly</string>
    <string name="slide_1_desc">The easiest way to organize your time with app</string>
    <string name="slide_2_title">Stay Fit</string>
    <string name="slide_2_desc">For those who can do</string>
    <string name="slide_3_title">Stay Healthy</string>
    <string name="slide_3_desc">Track your food activity around the year</string>
    <string name="slide_4_title">Make Resolutions</string>
    <string name="slide_4_desc">Plan your way and make track with our habit tracking app</string>
    <string name="delete_dialog_msg_all">Delete all habits</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_habits">Delete all the habits</string>
    <string name="delete_all_habits_successful">All habits were deleted</string>
    <string name="unknown_value">Insert Correct Value</string>
    <string name="editor_activity_title_new_habit">Add a Habit</string>
    <string name="editor_activity_title_edit_habit">Edit a Habit</string>
    <string name="editor_insert_habit_failed">Inserting Habit Failed</string>
    <string name="editor_insert_habit_successful">Habit inserted successfully</string>
    <string name="editor_update_habit_failed">updating habit failed</string>
    <string name="editor_update_habit_successful">habit successfully updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Habit ?</string>
    <string name="editor_delete_habit_failed">Deleting habit failed</string>
    <string name="editor_delete_habit_successful">Deleting habit successful</string>
    <string name="choose_image">Choose Image</string>
    <string name="steps">steps</string>
    <string name="liters">Lts</string>
    <string name="date">Date</string>
</resources>
